--- a/css/styles.css
+++ b/css/styles.css
@@ -6,27 +6,47 @@ a {
   color: #9B9B9B;
   text-decoration: none;
   line-height: 1.3;
-  font-size: 22px; }
+  font-size: 20px; }
   a:hover {
     color: #36E7BF; }
 
 .introduction {
-  font-size: 20px;
-  min-height: 800px;
-  height: 100vh;
-  /*margin-left: 150px;*/ }
-  .introduction h1 {
-    font-size: 64px;
-    margin-top: 215px;
-    margin-bottom: -10px; }
-  .introduction p {
+  font-size: 19px;
+  min-height: 650px;
+  height: 100vh; }
+  .introduction .content {
     width: 590px;
-    line-height: 1.5; }
-  .introduction .links {
-    margin-top: 100px; }
-    .introduction .links h2 {
-      font-size: 22px;
-      font-weight: 400;
-      margin-bottom: 3px; }
+    height: 430px;
+    margin-left: 150px;
+    margin-top: 180px;
+    border: 1px solid #000; }
+    .introduction .content h1 {
+      font-size: 64px;
+      margin-bottom: -10px;
+      margin-top: 0; }
+    .introduction .content p {
+      line-height: 1.5; }
+    .introduction .content .links {
+      margin-top: 100px; }
+      .introduction .content .links hr {
+        width: 90px;
+        margin: 0;
+        border-style: solid;
+        border-color: #36E7BF;
+        border-width: 2px; }
+      .introduction .content .links h2 {
+        font-size: 20px;
+        font-weight: 400;
+        margin-bottom: 3px; }
+
+.work .section {
+  height: 700px;
+  width: 100%;
+  display: inline block; }
+  .work .section .content {
+    width: calc(100% - 700px);
+    margin-left: 50px; }
+  .work .section .slider {
+    display: inline block; }
 
 /*# sourceMappingURL=styles.css.map */
