--- a/css/styles.scss
+++ b/css/styles.scss
@@ -11,7 +11,7 @@ a{
 	color: $light-grey;
 	text-decoration: none;
 	line-height: 1.3;
-	font-size: 22px;
+	font-size: 20px;
 
 	&:hover{
 		color: $bright-blue;
@@ -19,29 +19,61 @@ a{
 }
 
 .introduction{
-	font-size: 20px;
-	min-height: 800px;
+	font-size: 19px;
+	min-height: 650px;
 	height: 100vh;
-	/*margin-left: 150px;*/
 
-	h1{
-		font-size: 64px;
-		margin-top: 215px;
-		margin-bottom: -10px;
+	.content{
+		width: 590px;
+		height: 430px;
+		margin-left: 150px;
+		margin-top: 180px;
+		border: 1px solid #000;
+
+		h1{
+			font-size: 64px;
+			margin-bottom: -10px;
+			margin-top: 0;
+		}
+
+		p{
+			line-height: 1.5;
+		}
+
+		.links{		
+			margin-top: 100px;
+
+			hr{
+				width: 90px;
+				margin: 0;
+				border-style: solid;
+				border-color: $bright-blue;
+				border-width: 2px;
+			}
+
+			h2{
+				font-size: 20px;
+				font-weight: 400;
+				margin-bottom: 3px;
+			}
+		}
 	}
+}
 
-	p{
-		width:590px;
-		line-height: 1.5;
-	}
+.work{
+	
+	.section{
+		height: 700px;
+		width: 100%;
+		display: inline block;
 
-	.links{		
-		margin-top: 100px;
+		.content{
+			width: calc(100% - 700px);
+			margin-left: 50px;
+		}
 
-		h2{
-			font-size: 22px;
-			font-weight: 400;
-			margin-bottom: 3px;
+		.slider{
+			display: inline block;
 		}
 	}
 }
