--- a/css/styles.css
+++ b/css/styles.css
@@ -4,40 +4,58 @@
 
 a {
   color: #9B9B9B;
-  text-decoration: none;
-  line-height: 1.3;
-  font-size: 20px; }
+  text-decoration: none; }
   a:hover {
     color: #36E7BF; }
 
+.bold {
+  font-weight: 800; }
+
 .introduction {
-  font-size: 19px;
-  min-height: 650px;
+  font-size: 1.3em;
   height: 100vh; }
   .introduction .content {
-    width: 590px;
-    height: 430px;
-    margin-left: 150px;
-    margin-top: 180px;
-    border: 1px solid #000; }
+    max-width: 680px;
+    height: 550px;
+    margin-left: 12%;
+    margin-right: 10%;
+    margin-top: 12%;
+    /*border: 1px solid #000;*/ }
     .introduction .content h1 {
-      font-size: 64px;
-      margin-bottom: -10px;
+      font-size: 3.75em;
+      margin-bottom: -16.5px;
       margin-top: 0; }
     .introduction .content p {
-      line-height: 1.5; }
+      line-height: 1.5;
+      width: 590px; }
+    .introduction .content .line {
+      margin-top: 30px;
+      font-size: 1em;
+      line-height: 1.4; }
+      .introduction .content .line h2 {
+        font-size: 1em;
+        font-weight: 600;
+        margin-bottom: -1px; }
     .introduction .content .links {
-      margin-top: 100px; }
+      font-size: .75em;
+      margin-top: 60px; }
       .introduction .content .links hr {
         width: 90px;
         margin: 0;
         border-style: solid;
         border-color: #36E7BF;
-        border-width: 2px; }
+        border-width: 2px;
+        margin-bottom: 20px; }
+      .introduction .content .links a {
+        padding-right: 20px; }
+      .introduction .content .links .icons {
+        height: 14px;
+        margin-right: 3px; }
       .introduction .content .links h2 {
-        font-size: 20px;
+        font-size: 14px;
         font-weight: 400;
-        margin-bottom: 3px; }
+        margin-bottom: 5px;
+        margin-top: 20px; }
 
 .work .section {
   height: 700px;
