--- a/css/styles.scss
+++ b/css/styles.scss
@@ -10,38 +10,55 @@ $bright-blue: #36E7BF;
 a{
 	color: $light-grey;
 	text-decoration: none;
-	line-height: 1.3;
-	font-size: 20px;
 
 	&:hover{
 		color: $bright-blue;
 	}
 }
 
+.bold{
+	font-weight: 800;
+}
+
 .introduction{
-	font-size: 19px;
-	min-height: 650px;
+	font-size: 1.3em;
 	height: 100vh;
 
 	.content{
-		width: 590px;
-		height: 430px;
-		margin-left: 150px;
-		margin-top: 180px;
-		border: 1px solid #000;
+		max-width: 680px;
+		height: 550px;
+		margin-left: 12%;
+		margin-right: 10%;
+		margin-top: 12%;
+		/*border: 1px solid #000;*/
 
 		h1{
-			font-size: 64px;
-			margin-bottom: -10px;
+			font-size: 3.75em;
+			margin-bottom: -16.5px;
 			margin-top: 0;
 		}
 
 		p{
 			line-height: 1.5;
+			width: 590px;
 		}
 
-		.links{		
-			margin-top: 100px;
+		.line{		
+			margin-top: 30px;
+			font-size: 1em;
+			line-height: 1.4;
+
+
+			h2{
+				font-size: 1em;
+				font-weight: 600;
+				margin-bottom: -1px;
+			}
+		}
+
+		.links{
+			font-size: .75em;
+			margin-top: 60px;
 
 			hr{
 				width: 90px;
@@ -49,12 +66,25 @@ a{
 				border-style: solid;
 				border-color: $bright-blue;
 				border-width: 2px;
+				margin-bottom: 20px;
+			}
+
+			a{
+				padding-right: 20px;
+			
+			}
+
+			.icons{
+				height: 14px;
+				margin-right: 3px;
+
 			}
 
 			h2{
-				font-size: 20px;
+				font-size: 14px;
 				font-weight: 400;
-				margin-bottom: 3px;
+				margin-bottom: 5px;
+				margin-top: 20px;
 			}
 		}
 	}
