--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,11 @@ a {
   a:hover {
     color: #36E7BF; }
 
+.old-link {
+  position: absolute;
+  top: 20px;
+  right: 20px; }
+
 .bold {
   font-weight: 800; }
 
@@ -17,9 +22,9 @@ a {
   .introduction .content {
     max-width: 680px;
     height: 550px;
-    margin-left: 12%;
+    margin-left: 10%;
     margin-right: 10%;
-    margin-top: 12%;
+    margin-top: 11%;
     /*border: 1px solid #000;*/ }
     .introduction .content h1 {
       font-size: 3.75em;
@@ -29,7 +34,7 @@ a {
       line-height: 1.5;
       width: 590px; }
     .introduction .content .line {
-      margin-top: 30px;
+      margin-top: 20px;
       font-size: 1em;
       line-height: 1.4; }
       .introduction .content .line h2 {
@@ -65,6 +70,7 @@ a {
     width: calc(100% - 700px);
     margin-left: 50px; }
   .work .section .slider {
-    display: inline block; }
+    right: 0;
+    top: 0; }
 
 /*# sourceMappingURL=styles.css.map */
