--- a/css/styles.scss
+++ b/css/styles.scss
@@ -16,6 +16,13 @@ a{
 	}
 }
 
+.old-link{
+	position: absolute;
+	top:20px;
+	right: 20px;
+}
+
+
 .bold{
 	font-weight: 800;
 }
@@ -27,9 +34,9 @@ a{
 	.content{
 		max-width: 680px;
 		height: 550px;
-		margin-left: 12%;
+		margin-left: 10%;
 		margin-right: 10%;
-		margin-top: 12%;
+		margin-top: 11%;
 		/*border: 1px solid #000;*/
 
 		h1{
@@ -44,7 +51,7 @@ a{
 		}
 
 		.line{		
-			margin-top: 30px;
+			margin-top: 20px;
 			font-size: 1em;
 			line-height: 1.4;
 
@@ -103,7 +110,8 @@ a{
 		}
 
 		.slider{
-			display: inline block;
+			right: 0;
+			top: 0;
 		}
 	}
 }
