--- a/css/styles.css
+++ b/css/styles.css
@@ -63,14 +63,45 @@ a {
         margin-top: 20px; }
 
 .work .section {
-  height: 700px;
+  margin-top: 20px;
+  height: 600px;
   width: 100%;
   display: inline block; }
   .work .section .content {
-    width: calc(100% - 700px);
-    margin-left: 50px; }
-  .work .section .slider {
-    right: 0;
-    top: 0; }
+    width: calc(100% - 810px);
+    margin-left: 30px; }
+    .work .section .content .project-number {
+      font-size: .9em; }
+    .work .section .content h1 {
+      font-size: 2.7em;
+      margin-bottom: 10px;
+      margin-top: -2px; }
+    .work .section .content .specs {
+      width: 28%;
+      border-left: 1px solid #999;
+      /*1px solid #999; or 2px solid rgba(243, 156, 18, 0.5) ?*/
+      display: inline-block;
+      padding-left: 10px;
+      font-size: .9em;
+      vertical-align: top;
+      margin-bottom: 50px; }
+      .work .section .content .specs > .keyword {
+        text-transform: uppercase;
+        color: #9B9B9B;
+        font-size: .8em;
+        display: block;
+        padding-bottom: 5px;
+        font-weight: bold; }
+      .work .section .content .specs > a {
+        display: inline-block; }
+    .work .section .content p {
+      font-size: 1.2em;
+      line-height: 1.5;
+      padding-bottom: 6px; }
+    .work .section .content .more {
+      font-size: 1.4em; }
+      .work .section .content .more img {
+        height: 10px;
+        padding-right: 5px; }
 
 /*# sourceMappingURL=styles.css.map */
