--- a/css/styles.scss
+++ b/css/styles.scss
@@ -100,18 +100,65 @@ a{
 .work{
 	
 	.section{
-		height: 700px;
+		margin-top: 20px;
+		height: 600px;
 		width: 100%;
 		display: inline block;
 
-		.content{
-			width: calc(100% - 700px);
-			margin-left: 50px;
-		}
 
-		.slider{
-			right: 0;
-			top: 0;
+		.content{
+			width: calc(100% - 810px);
+			margin-left: 30px;
+
+			.project-number{
+				font-size: .9em;
+			}
+
+			h1{
+				font-size: 2.7em;
+				margin-bottom: 10px;
+				margin-top: -2px;
+			}
+
+			.specs {
+				width: 28%;
+				border-left: 1px solid #999; /*1px solid #999; or 2px solid rgba(243, 156, 18, 0.5) ?*/
+				display: inline-block;
+				padding-left: 10px;
+				font-size: .9em;
+				vertical-align: top;
+				margin-bottom: 50px;
+			
+				&> .keyword {
+					text-transform: uppercase;
+					color: $light-grey;
+					font-size: .8em;
+					display: block;
+					padding-bottom: 5px;
+					font-weight: bold;
+				}
+			
+				&> a {
+				display: inline-block;
+	
+				}
+			}
+
+			p{
+				font-size: 1.2em;
+				line-height: 1.5;
+				padding-bottom: 6px;
+			}
+
+			.more{
+			font-size: 1.4em;
+
+				img{
+					height: 10px;
+					padding-right: 5px;
+				}
+			}
+
 		}
 	}
 }
